fix(styles): properly align rba-editor actions

--- a/src/client/styles/directives/editor.scss
+++ b/src/client/styles/directives/editor.scss
@@ -49,6 +49,7 @@
 	 **********/
 	h5 {
 		display: flex;
+		align-items: baseline;
 		padding: 0 4.5% 0 6px;
 		margin-bottom: 6px;
 	}
